# Geometry-of-Knowledge-Allows-Extending-Diversity-Boundaries-of-Large-Language-Models

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
experiments/: EXPERIMENTS_README.md  augment_aut_responses.py  augment_responses.py  plot_lambda_ablation.py  probe_context_injection.py  probe_embedding_scale.py  probe_projector_distribution.py  probe_refinement_prompts.py  remove_newlines.py  xRAG
experiments/g2/: AUT_EXPERIMENTS_README.md  EXPERIMENT_GUIDE.md  dexperts_entropy.py
experiments/g2/eval/: utils.py
experiments/g2/eval/novelty-bench/src/: run_eval.py  run_sample.py
experiments/g2/scripts/eval/novelty/: run_eval.sh  run_sample.sh
experiments/llm-discussion/: auto_grade_final.py  automation_csv.py
experiments/llm-discussion/multi_agent/: agents.py  app.py  config_role.json  discussion.py
experiments/scripts/: run_ablations.sh  run_augmentation.sh  run_aut.sh  run_evaluation.sh  run_paper_main.sh
experiments/src/: common.py  inference.py  mean_scores2.py  partition.py  score.py  score_mean.py  summarize.py  summarize_means.py
hpc/: wcss_ablations.slurm  wcss_paper_main.slurm  wcss_probe_context_injection.slurm  wcss_probe_embedding.slurm  wcss_probe_projector.slurm  wcss_probe_refinement.slurm
